Duplicating a collection instance does not duplicate the dupli_group #61787

Closed
opened 2019-02-21 10:30:30 +01:00 by Sebastian Koenig · 5 comments

System Information
Operating system: elementary 0.4.1
Graphics card: GTX 1080

Blender Version
Broken: 2.80, f4d9e49f28

Worked: It did work some builds before

Short description of error
I used to be able to hit Shift-D on an Empty with DupliGroup and it would not only duplicate the Empty but also the dupli_group, so that i have a second collection instance.
Exact steps for others to reproduce the error
Open the file below and hit Shift-D. It only duplicates the Empty, but not the instanced Suzanne.
scene_A.blend

**System Information** Operating system: elementary 0.4.1 Graphics card: GTX 1080 **Blender Version** Broken: 2.80, f4d9e49f286f Worked: It did work some builds before **Short description of error** I used to be able to hit Shift-D on an Empty with DupliGroup and it would not only duplicate the Empty but also the dupli_group, so that i have a second collection instance. **Exact steps for others to reproduce the error** Open the file below and hit Shift-D. It only duplicates the Empty, but not the instanced Suzanne. [scene_A.blend](https://archive.blender.org/developer/F6677706/scene_A.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-02-21 10:42:20 +01:00

Indeed… :|

Indeed… :|

This issue was referenced by 0625a10efb

This issue was referenced by 0625a10efbe4e2a61fbfcf79dbf42ae399798aea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61787
No description provided.